1.0/README.md
<img src="https://raw.githubusercontent.com/jujuadams/ScribbleJunior/master/LOGO.png" width="50%" style="display: block; margin: auto;" />
<h1 align="center">Scribble Jr. 1.0</h1>
<p align="center">Lightweight text renderer for GameMaker by <a href="https://www.jujuadams.com/" target="_blank">Juju Adams</a></p>

<p align="center"><a href="https://github.com/jujuadams/ScribbleJunior/releases/" target="_blank">Download the .yymps</a></p>

---


**What platforms does Scribble Jr. support?**

Everything apart from HTML5. You might run into edge cases on platforms that I don't regularly test; please [report any bugs](https://github.com/JujuAdams/ScribbleJunior/issues) if and when you find them.

&nbsp;

**What versions of GameMaker does Scribble Jr. support?**

Scribble Jr. primarily supports GameMaker 2023.8, and in theory supports every version of GameMaker later than that. Later versions of GameMaker may change functionality in a way that Scribble Jr. is not forwards-compatible with, but Scribble Jr. uses only native GameMaker functions so is in the best possible position for long-term compatibility.

&nbsp;

**How is Scribble Jr. licensed? Can I use it for commercial projects?**

[Scribble Jr. is released under the MIT license](https://github.com/JujuAdams/ScribbleJunior/blob/master/LICENSE). This means you can use it for whatever purpose you want, including commercial projects. It'd mean a lot to me if you'd drop my name in your credits (Juju Adams) and/or say thanks, but you're under no obligation to do so.

&nbsp;

**I think you're missing a useful feature and I'd like you to implement it!**

Great! Please make a [feature request](https://github.com/JujuAdams/ScribbleJunior/issues). Feature requests make Scribble Jr. a more fun tool to use and gives me something to think about when I'm bored on public transport.

&nbsp;

**I found a bug, and it both scares and mildly annoys me. What is the best way to get the problem solved?**

Please make a [bug report](https://github.com/JujuAdams/ScribbleJunior/issues). Juju checks GitHub every day and bug fixes usually go out a couple days after that.

&nbsp;

**Who made Scribble Jr.?**

Scribble Jr. is built and maintained by [@jujuadams](https://twitter.com/jujuadams) who has a long history of fiddling with text engines. Juju's worked on a lot of [commercial GameMaker games](http://www.jujuadams.com/).

&nbsp;

**Can I send you donations? Are you going to start a Patreon?**

Thank you for wanting to show your appreciation - it really does mean a lot to me personally - but I'm fortunate enough to have a stable income from gamedev. I'm not looking to join Patreon as a creator at this moment in time. If you'd like to support my work then drop me a credit in your game and/or gimme a shout-out on the social media platform of your choice.
